fixed clipped mm-loader in mm-grid

--- a/src/mm-grid/mm-grid.scss
+++ b/src/mm-grid/mm-grid.scss
@@ -66,14 +66,13 @@
 }
 
 #loader {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	margin: auto;
-	width: 125px;
+	top: 50%;
+	left: 50%;
+	right: 50%;
+	width: 130px;
 	height: 28px;
+	margin-top: -14px;
+	margin-left: -75px;
 }
 
 #columnContainer {
